# material-dioxus

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dprint.json  package-lock.json  package.json  postprocess.mjs  rollup.config.mjs
.github/workflows/: deploy_website.yml  lint.yml
demo/: Cargo.toml  Dioxus.toml
demo/src/: inline.css  main.rs
material-dioxus/: Cargo.toml
material-dioxus/src/: button.rs  checkbox.rs  circular_progress.rs  circular_progress_four_color.rs  dialog.rs  fab.rs  form_field.rs  icon.rs  icon_button.rs  lib.rs  radio.rs  switch.rs  theming.rs
material-dioxus/src/dialog/: dialog_action.rs
material-dioxus/src/drawer/: drawer_header.rs  drawer_subtitle.rs  drawer_title.rs
material-dioxus/src/icon_button_toggle/: off_icon.rs  on_icon.rs
material-dioxus/src/list/: check_list_item.rs
material-dioxus/src/text_inputs/: mod.rs  textfield.rs
material-dioxus/src/top_app_bar/: title.rs
material-dioxus/src/utils/: mod.rs
screenshots/: Cargo.toml
src/: button.rs  checkbox.rs  circular_progress.rs  circular_progress_four_color.rs  dialog.rs  fab.rs  form_field.rs  icon.rs  icon_button.rs  lib.rs  list.rs  palette.rs  radio.rs  switch.rs  theming.rs
src/dialog/: dialog_action.rs
src/drawer/: drawer_app_content.rs
src/list/: check_list_item.rs  list_index.rs  list_item.rs  radio_list_item.rs  request_selected.rs  selected_detail.rs  separator.rs
src/tabs/: tab_icon.rs
src/text_inputs/: mod.rs  textarea.rs  textfield.rs
src/top_app_bar/: action_items.rs  navigation_icon.rs
src/utils/: mod.rs
website/: Cargo.toml
