[package]
name = "material-dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
gloo-console = "0.3.0"
dioxus-web = "0.4.0"

[dependencies.material-dioxus]
version = "0.0.1-dev"
path = "../material-dioxus/"
features = ["full"]
