[package]
name = "material-dioxus-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.6.0"
gloo-console = "0.3.0"

material-dioxus = { version = "0.0.4-dev", path = "../", features = ["full"] }
