[package]
name = "material-dioxus"
version = "0.0.1-dev"
authors = ["RubixDev <silas.groh@t-online.de>", "Hamza <muhammadhamza1311@gmail.com>"]
edition = "2021"
readme = "../README.md"
repository = "https://github.com/RubixDev/material-dioxus"
keywords = ["material-design", "dioxus", "wrapper", "wasm"]
categories = ["web-programming", "wasm", "api-bindings", "gui"]
include = ["src/**/*", "Cargo.toml", "build"]
license = "Apache-2.0"
description = "Dioxus wrapper for Material Web Components"

[dependencies]
wasm-bindgen = "0.2.87"
dioxus = "0.4.0"
js-sys = "0.3.64"
paste = "1.0.14"
gloo = "0.10.0"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
palette = { version = "0.7.3", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "ValidityState",
  "CustomEvent",
]

[features]
button = []
circular-progress = []
checkbox = []
circular-progress-four-color = []
# drawer = []
# top-app-bar = []
icon-button = []
fab = []
formfield = []
# linear-progress = []
icon = []
radio = []
switch = []
# top-app-bar-fixed = []
dialog = []
list = []
# icon-button-toggle = []
# slider = []
# tabs = []
# snackbar = []
textfield = []
textarea = []
# select = []
# menu = []
theming = ["palette"]
palette = ["dep:palette"]
all-components = [
    "button",
    "circular-progress",
    "checkbox",
    "circular-progress-four-color",
    # "drawer",
    # "top-app-bar",
    "icon-button",
    "fab",
    "formfield",
    # "linear-progress",
    "icon",
    "radio",
    "switch",
    # "top-app-bar-fixed",
    "dialog",
    "list",
    # "icon-button-toggle",
    # "slider",
    # "tabs",
    # "snackbar",
    "textfield",
    "textarea",
    # "select",
    # "menu",
]
full = ["all-components", "theming"]
default = []

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
